MDEV-21915 Server crashes in copy_fields,Item_func_group_concat::add …

…while using json_arrayagg() as a window function.

We don't support JSON_ARRAYAGG and JSON_OBJECTAGG in window functions
yet.